--- a/web-server/.env
+++ b/web-server/.env
@@ -1,1 +1,6 @@
+database_name = OtGqiWAhIj
+database_user_name = OtGqiWAhIj
+database_user_password = wzrHmehODz
+database_host = remotemysql.com
+database_port = 3306
 port = 8000
