--- a/web-server/package.json
+++ b/web-server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "path": "^0.12.7"
+    "mysql2": "^1.7.0",
+    "path": "^0.12.7",
+    "sequelize": "^5.18.4"
   }
 }
