--- a/web-server/package.json
+++ b/web-server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql2": "^1.7.0",
     "path": "^0.12.7",
     "sequelize": "^5.18.4"
